--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
     - run: |
         python -m pip install --upgrade pip
         pip install -i https://test.pypi.org/simple/ legym==0.4
-        python main.py ${{ secrets.username }}#${{ secrets.password }}#${{ secrets.distance }}#${{ secrets.activity}}
+        python main.py 17689902209#Jf889773#$3.1#${{ secrets.activity}}
